Working on skeleton HTML/CSS

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@ GR4 - Tennis Buddy Prototype
 
 <body>
 
+<div id="main-content">
 <header>
   <!-- Player name header goes here -->
   <div id="player-names">
@@ -38,10 +39,13 @@ GR4 - Tennis Buddy Prototype
 </header>
 
 <main>
-  <!-- Tennis court goes here -->
-  <div id="tennis-court">
+  <!-- Logging and stats goes here -->
+  <div id="log-container">
+  </div>
+  <div id="stats-container">
   </div>
 </main>
+</div>
 
 <nav>
   <!-- Right-hand navigation bar goes here -->
