--- a/index.html
+++ b/index.html
@@ -1,54 +1,44 @@
 <!DOCTYPE html>
-<!--
-GR4 - Tennis Buddy Prototype
--->
+<!-- GR4 - Tennis Buddy Prototype -->
 <html>
-
 <head>
-<meta charset="utf-8">
-<title>Tennis Buddy</title>
-
-<!-- Use mobile-aware viewport -->
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-<!-- Load style sheets -->
-<link rel="stylesheet" href="main.css">
-
-<!-- Load any supplemental Javascript libraries here -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/seedrandom/2.4.2/seedrandom.js"></script>
-
-<!-- Constructible EventTarget polyfill — Only Chrome 64+ supports constructible EventTarget objects natively -->
-<script src="https://unpkg.com/event-target@latest/min.js"></script>
-
-<script src="util.js"></script>
-<script src="candy.js"></script>
-<script src="board.js"></script>
-<script src="rules.js"></script>
-<script src="game.js"></script>
-
-
+  <meta charset="utf-8">
+  <title>Tennis Buddy</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="main.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="main.js"></script>
 </head>
 
 <body>
+  <div id="container">
+    <!-- Player name header goes here -->
+    <div id="player-names">
+    </div>
 
-<header>
-  <!-- Player name header goes here -->
-  <div id="player-names">
+    <!-- Tennis court goes here -->
+    <div id="tennis-court">
+    </div>
+
+    <!-- Right-hand navigation bar goes here -->
+    <div id="nav-bar">
+      <div id="menu-menu" class="menu-item-wrapper">
+        <div class="menu-item">Menu</div>
+        <div class="menu-popup">I am a Menu popup.</div>
+      </div>
+      <div id="menu-stats" class="menu-item-wrapper">
+        <div class="menu-item">Stats</div>
+        <div id="menu-popup-stats" class="menu-popup">I am a Stats popup.</div>
+      </div>
+      <div id="menu-score" class="menu-item-wrapper">
+        <div class="menu-item">Score</div>
+        <div class="menu-popup">I am a Score popup.</div>
+      </div>
+      <div id="menu-undo" class="menu-item-wrapper">
+        <div class="menu-item">Undo</div>
+        <div class="menu-popup">I am an Undo popup.</div>
+      </div>
+    </div>
   </div>
-</header>
-
-<main>
-  <!-- Tennis court goes here -->
-  <div id="tennis-court">
-  </div>
-</main>
-
-<nav>
-  <!-- Right-hand navigation bar goes here -->
-  <div id="nav-bar">
-  </div>
-</nav>
-
 </body>
-
 </html>
