Added container for left-hand-side of screen

--- a/index.html
+++ b/index.html
@@ -12,17 +12,18 @@
 
 <body>
   <div id="container">
-    <!-- Player name header goes here -->
-    <div id="player-names">
-    </div>
-
-    <div id="logging-ui">
-      <div id="toolbar"></div>
-      <div id="tennis-court">
-	<!-- Tennis court goes here -->
+    <div id="content">
+      <div id="player-names">
+	<!-- Player name header goes here -->
       </div>
-    </div> 
-    <div id="stats-ui">
+
+      <div id="logging-ui">
+	<div id="logging-toolbar"></div>
+	<div id="tennis-court">
+	  <!-- Tennis court goes here -->
+	</div>
+      </div> 
+      <div id="stats-ui">
     </div>
 
     <!-- Right-hand navigation bar goes here -->
