Added toolbar buttons

--- a/index.html
+++ b/index.html
@@ -18,7 +18,20 @@
       </div>
       
       <div id="logging-ui">
-	<div id="logging-toolbar"></div>
+	<div id="logging-toolbar">
+	  <div id="forehand">
+	    <input type="button" value="(F)orehand">
+	  </div>
+	  <div id="backhand">
+	    <input type="button" value="(B)ackhand">
+	  </div>
+	  <div id="volley">
+	    <input type="button" value="(V)olley">
+	  </div>
+	  <div id="serve">
+	    <input type="button" value="(S)erve">
+	  </div>
+	</div>
 	<div id="tennis-court">
 	  <!-- Tennis court goes here -->
 	</div>
