Changed toolbar layout

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
       
       <div id="logging-ui">
 	    <div id="logging-toolbar">
-	        <input type="button" class="borderless" id="forehand-button" value="(F)orehand">
-	        <input type="button" class="borderless" id="backhand-button" value="(B)ackhand">
-	        <input type="button" class="borderless" id="volley-button" value="(V)olley">
-	        <input type="button" class="borderless" id="serve-button" value="(S)erve">
+	        <input type="button" class="toolbar-button borderless" id="forehand-button" value="(F)orehand">
+	        <input type="button" class="toolbar-button borderless" id="backhand-button" value="(B)ackhand">
+	        <input type="button" class="toolbar-button borderless" id="volley-button" value="(V)olley">
+	        <input type="button" class="toolbar-button borderless" id="serve-button" value="(S)erve">
 	    </div>
 	    <div id="tennis-court">
 	      <img src="graphics/tennis-court.svg" id="tennis-court">
