Finished tennis court JS for the most part.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
 	    </div>
 	    <div id="tennis-court">
 	      <img src="graphics/tennis-court.svg" id="tennis-court">
+          <img src="graphics/tennis-player.svg" class="hidden" id="tennis-player">
+          <img src="graphics/tennis-player-red.svg" class="hidden" id="tennis-player-red">
+          <img src="graphics/tennis-ball.svg" class="hidden" id="tennis-ball">
+          <img src="graphics/tennis-ball-red.svg" class="hidden" id="tennis-ball-red">          
 	    </div>
       </div> 
       <div id="stats-ui">
