Add write feedback popup

--- a/index.html
+++ b/index.html
@@ -109,7 +109,20 @@
             <div class="stats_menu_feedback_container">
 
               <button id="stats_menu_btn">Write Feedback</button>
-
+              <div class="menu-subpopup">
+                <div class="feedback_menu_container" id="feedback_menu">
+                  <div class="feedback_menu_header_container">
+                  Write Feedback
+                  </div>
+                  <div class="feedback_comment_box_container">
+                    <textarea rows="20" cols="40", id="feedback_text" placeholder="Write you feedback here!"></textarea>
+                  </div>
+                  <div class="feedback_buttons_container">
+                    <button class = "feedback_btn" id="send_fb_btn">Send</button>
+                    <button class = "feedback_btn" id="cancel_fb_btn">Cancel</button>
+                  </div>
+                </div>
+              </div>
             </div>
 
           </div>
