Add label swapping

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
       <div id="player-names">
         <div class="names_header">
 
-          <div class = "player_label" id="player1">Steve</div>
+          <div class = "player_label" id="player_left">Steve</div>
           <button id="swap_btn">
             <img src="./graphics/swap.png" id="swap_icon">
           </button>
-          <div class = "player_label" id="player2">Jim</div>
+          <div class = "player_label" id="player_right">Jim</div>
 
         </div>
       </div>
