--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <div id="current-matches" class="menu-item-wrapper">
               <div class="menu-item">Current Matches</div>
               <div id="current-matches-list" class="menu-dropdown">
-                <div class="menu-item" data-match-id="0">Steve</div>
-                <div class="menu-item" data-match-id="1">John</div>
+                <div class="menu-item">Steve</div>
+                <div class="menu-item">John</div>
               </div>
             </div>
             <div id="history" class="menu-item">History</div>
