Fix in stats page

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 
       <div class="feedback_menu_container" id="feedback_menu">
         <div class="feedback_menu_header_container">
-          Feedback for Player:
+          Feedback for <span id="feedback_player">Player</span>:
         </div>
         <textarea rows="3" id="feedback_text" placeholder="Write your feedback here!"></textarea>
         <button class="feedback_btn" id="send_fb_btn">Send</button>
@@ -236,7 +236,7 @@
       <div class="stats_menu_table_container">
         <div class = "stats_menu_col" id = "stats-summary">
           <div class="stats_menu_table_header">Your Recent Match</div>
-          <div class="stats_menu_table_subheader">April 20 10am</div>
+          <div class="stats_menu_table_subheader">April 20, 10am</div>
 
           <div class="stats_menu_table_row">
             <img src="graphics/blue-pin.png" class="shot-pin-display">
