Made some fixups to modals

--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
     <div class="modal-content">
       <div class="modal-content-header">
          <div>How Did the Point End?</div>
-         <div class="close">&times;</div>
+         <div class="close" id="shot_modal_close">&times;</div>
       </div>
       <div id="point_end_options_container">
         <div id="forced_error_btn" class="shot_ending_type">Forced Error</div>
