added () for opponents

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <div class="score_column" id="score_column_player2">
 
             <div class="set_score_box">
-              <div class="score_player_label">Jim</div>
+              <div class="score_player_label">( blah )</div>
             </div>
 
             <!--
